# sciunit

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  CODE_OF_CONDUCT.md  COMMITTEE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST  MANIFEST.in  README.html  README.markdown  README.md  chapter1.html  chapter2.html  chapter3.html  chapter4.html  chapter5.html  chapter6.html  environment.yml  example.ipynb  genindex.html  objects.inv  pyproject.toml  readthedocs.yml  requirements.txt  sciunit-scratch.html  search.html  searchindex.js  setup.cfg  setup.py  test.sh  test_all.py  tests.py
.github/: release-drafter.yml
.github/workflows/: python-package.yml  (+1 more)
GeneratedFiles/: chapter1.py  chapter2.py  chapter3.py
_sources/: README.md  chapter1.ipynb  chapter2.ipynb  chapter4.ipynb  chapter5.ipynb  chapter6.ipynb  sciunit-scratch.ipynb
docker/: Dockerfile
docs/: Makefile  QuickTutorialsNotebook.ipynb  README.md  README.txt  _config.yml  _toc.yml  chapter1.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  chapter6.ipynb  publish.sh  workshop-tutorial.ipynb
sciunit/: __init__.py  __main__.py  _tables.py  base.py  candidates.py  capabilities.py  comparators.py  config.json  converters.py  errors.py  models.py  scoremaps.py  scores.py  style.css  suites.py  tests.py  utils.py  validators.py  version.py
source/: README.html  basics.html  commandline.html  index.html  modules.html  quick_tutorial.html  sciunit.html  sciunit.models.html  sciunit.scores.html  sciunit.unit_test.html  setup.html
unit_test/: core_tests.py
(+58 files in other folders)
