[metadata]
name = sciunit
version = 0.2.4
description = A test-driven framework for formally validating scientific models against data.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://sciunit.scidash.org

author = Rick Gerkin
author_email = rgerkin@asu.edu
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
  bs4
  cerberus>=1.2
  deepdiff
  gitpython
  importlib-metadata<4.0
  ipykernel
  ipython
  jsonpickle
  lxml
  matplotlib
  nbconvert
  nbformat
  pandas>=0.18
  quantities>=0.12.1
  sty


[options.entry_points]
console_scripts = sciunit=sciunit.__main__:main
